--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node index.js",
     "build": "npm i"
   },
+  "engines": {
+    "node": "18.17.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
