--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1494.0",
+    "aws-sdk": "^2.895.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^3.6.0",
     "path": "^0.12.7"
   }
